--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
+body {
+  font-family: sans-serif;
+}
+
 .container {
-  max-width: 680px;
+  max-width: 994px;
   margin-left: auto;
   margin-right: auto;
 }
